--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "covid-cnn-bookmarklet",
   "version": "1.0.0",
   "description": "Generates bookmarklets to access most recent CNN daily live news page on COVID-19.",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rpavlik/covid-cnn-bookmarklet.git"
+  },
   "dependencies": {},
   "devDependencies": {
     "@babel/preset-env": "^7.9.0",
