--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covid-cnn-bookmarklet",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Generates bookmarklets to access most recent CNN daily live news page on COVID-19.",
   "license": "MIT",
   "repository": {
@@ -21,8 +21,11 @@
     "gulp-buffer": "0.0.2",
     "gulp-clean-dir": "^1.0.2",
     "gulp-eslint": "^6.0.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-replace": "^1.0.0",
     "gulp-tap": "^2.0.0",
     "gulp-terser": "^1.2.0",
+    "merge-stream": "^2.0.0",
     "rollup-stream": "^1.24.1"
   },
   "engines": {
