--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-clean-dir": "^1.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-tap": "^2.0.0",
     "gulp-terser": "^1.2.0",
