--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gulp-buffer": "0.0.2",
     "gulp-clean-dir": "^1.0.2",
     "gulp-eslint": "^6.0.0",
-    "gulp-gh-pages": "^0.5.4",
+    "gulp-inject-string": "^1.1.2",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-tap": "^2.0.0",
