--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/preset-env": "^7.9.0",
+    "@justeat/gulp-gh-pages": "git+https://github.com/justeat/gulp-gh-pages.git",
     "bookmarklet": "github:rpavlik/bookmarklet#babel7",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
