--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covid-cnn-bookmarklet",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Generates bookmarklets to access most recent CNN daily live news page on COVID-19.",
   "license": "MIT",
   "repository": {
@@ -31,5 +31,8 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "scripts": {
+    "build": "gulp build"
   }
 }
