--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,22 +10,18 @@ on:
     branches: [ master ]
 
 env:
-  nodeversion: 10.x
+  NODEVERSION: 10.x
   
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v2 
-    - name: Use Node.js $nodeversion
+    - name: Use Node.js $NODEVERSION
       uses: actions/setup-node@v1
       with:
-        node-version: $nodeversion
+        node-version: $NODEVERSION
     - run: npm ci
     - run: npm run build --if-present
