--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,9 +9,6 @@ on:
   pull_request:
     branches: [ master ]
 
-env:
-  NODEVERSION: 10.x
-  
 jobs:
   build:
 
@@ -19,9 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2 
-    - name: Use Node.js $NODEVERSION
+    - name: Use Node.js 10.x
       uses: actions/setup-node@v1
       with:
-        node-version: $NODEVERSION
+        node-version: 10.x
     - run: npm ci
     - run: npm run build --if-present
