--- a/.github/workflows/nodejs-deploy.yml
+++ b/.github/workflows/nodejs-deploy.yml
@@ -5,24 +5,22 @@ name: Node.js Output Deploy
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2 
-    - name: Use Node.js 10.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: 10.x
-    - run: npm ci
-    - run: npm run build
-    - name: Deploy to GitHub Pages
-      uses: Cecilapp/GitHub-Pages-deploy@master
-      env:
-        EMAIL: ryan.pavlik@gmail.com
-        GH_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BUILD_DIR: dist
+      - uses: actions/checkout@v2
+      - name: Use Node.js 10.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10.x
+      - run: npm ci
+      - run: npm run build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
