--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "devDependencies": {
     "@babel/preset-env": "^7.9.0",
     "@justeat/gulp-gh-pages": "git+https://github.com/justeat/gulp-gh-pages.git",
+    "bhttp": "^1.2.6",
     "bookmarklet": "github:rpavlik/bookmarklet#babel7",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
+    "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-bookmarklet": "github:rpavlik/gulp-bookmarklet#babel7",
     "gulp-buffer": "0.0.2",
@@ -27,12 +31,14 @@
     "gulp-replace": "^1.0.0",
     "gulp-tap": "^2.0.0",
     "gulp-terser": "^1.2.0",
+    "mocha": "^7.1.1",
     "rollup-stream": "^1.24.1"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "build": "gulp build"
+    "build": "gulp build",
+    "test": "mocha -r esm"
   }
 }
