--- a/.github/workflows/nodejs-deploy.yml
+++ b/.github/workflows/nodejs-deploy.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 10.x
       - run: npm ci
+      - run: npm test
       - run: npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
