--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "bhttp": "^1.2.6",
     "bookmarklet": "github:rpavlik/bookmarklet#babel7",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.20.1",
@@ -32,6 +31,7 @@
     "gulp-tap": "^2.0.0",
     "gulp-terser": "^1.2.0",
     "mocha": "^7.1.1",
+    "node-fetch": "^2.6.0",
     "rollup-stream": "^1.24.1"
   },
   "engines": {
