--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,10 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2 
-    - name: Use Node.js 10.x
+    - name: Use Node.js
       uses: actions/setup-node@v1
-      with:
-        node-version: 10.x
     - run: npm ci
     - run: npm test
     - run: npm run build --if-present
