--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@justeat/gulp-gh-pages": "git+https://github.com/justeat/gulp-gh-pages.git",
     "bookmarklet": "github:rpavlik/bookmarklet#babel7",
     "chai": "^4.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.13.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
@@ -30,7 +30,8 @@
     "gulp-terser": "^1.2.0",
     "mocha": "^7.1.1",
     "node-fetch": "^2.6.1",
-    "rollup-stream": "^1.24.1"
+    "rollup-stream": "^1.24.1",
+    "source-map-resolve": "^0.6.0"
   },
   "engines": {
     "node": ">=10.12.0"
