--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
-    "gulp-bookmarklet": "github:rpavlik/gulp-bookmarklet#babel7",
+    "gulp-bookmarklet": "git+https://github.com/rpavlik/gulp-bookmarklet.git#babel7",
     "gulp-buffer": "0.0.2",
     "gulp-clean-dir": "^1.0.2",
     "gulp-eslint": "^6.0.0",
