--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.0",
-    "@justeat/gulp-gh-pages": "git+https://github.com/justeat/gulp-gh-pages.git#6370575b11bc777b1dfdcda051db60c77a00f4e8",
+    "@justeat/gulp-gh-pages": "^1.0.3",
     "chai": "^4.2.0",
     "eslint": "^7.13.0",
     "eslint-config-google": "^0.14.0",
