--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "url": "git+https://github.com/rpavlik/covid-cnn-bookmarklet.git"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.9.0",
+    "@babel/core": "^7.13.0",
+    "@babel/preset-env": "^7.15.6",
     "@justeat/gulp-gh-pages": "^1.0.3",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "eslint": "^7.13.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-bookmarklet-babel7": "^2.0.0",
@@ -24,9 +25,9 @@
     "gulp-eslint": "^6.0.0",
     "gulp-inject-string": "^1.1.2",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
+    "gulp-replace": "^1.1.3",
     "gulp-tap": "^2.0.0",
-    "gulp-terser": "^1.2.0",
+    "gulp-terser": "^1.4.1",
     "mocha": "^8.2.1",
     "node-fetch": "^2.6.1",
     "rollup-stream": "^1.24.1",
